#pragma once
/// @file

#include "aircraft_type.hpp"

#include <map>
#include <set>

namespace ta {

/// @brief Objects of this class are used for recording the activities of a single type of aircraft.
/// There will be one instance of this class for each type of aircraft in a simulation run. See the
/// @c StatisticsPool class used to hold the instances of this class.
//
class Statistics {
    std::string_view m_name = "";

    FlightCountType        m_flight_count    = 0U;
    ChargeSessionCountType m_charge_sessions = 0U;
    FaultCountType         m_faults          = 0U;

    HoursType          m_accumulated_charge_time     = 0.0;
    HoursType          m_accumulated_flight_hours    = 0.0;
    MilesType          m_accumulated_flight_miles    = 0.0;
    PassengerMilesType m_accumulated_passenger_miles = 0.0;

    std::set<AircraftCountType> m_vehicles;

public:
    Statistics() noexcept = default;
    explicit Statistics(const AircraftType& aircraft_type) noexcept;

    std::string_view       name() const noexcept { return m_name; }
    FlightCountType        total_flights() const noexcept;
    ChargeSessionCountType total_charge_sessions() const noexcept;
    PassengerMilesType     total_passenger_miles() const noexcept;
    FaultCountType         total_faults() const noexcept;
    AircraftCountType      total_vehicles() const noexcept;

    void record_vehicle(SimEntityId id) noexcept;
    void record_fault() noexcept;
    void record_charging_session(HoursType hours) noexcept;
    void record_flight(HoursType hours, MilesType miles, PassengerCountType passengers) noexcept;

    HoursType average_hours_per_flight() const noexcept;
    MilesType average_miles_per_flight() const noexcept;
    HoursType average_hours_per_charge() const noexcept;
};

class StatisticsPool {
    std::map<std::string_view, Statistics> m_pool{};

public:
    void        add(Statistics&& s) noexcept { m_pool.emplace(s.name(), s); }
    Statistics& get(std::string_view name) noexcept { return m_pool[name]; }
};

} // namespace ta
